make product_detail

--- a/html/product_list.html
+++ b/html/product_list.html
@@ -71,9 +71,9 @@
       <div class="row">
         <div class="col-xl-3 col-lg-4 col-md-6">
           <div class="card" style="width: 18rem;">
-            <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20220406_236%2F1649234609846WbS7k_JPEG%2F50370507748936592_1949559215.jpg&type=sc960_832" class="card-img-top" alt="...">
+            <a href="product_detail.html"><img src="http://earlyadopter.godohosting.com/goods_earlyadopter_godo_co_kr/320/1624843780819s0.jpg?cache_ver=2021033002" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">MPOW PC356 RGB USB 미니 기계식 게임용 키보드 </h5>
+              <h5 class="card-title">ABKO HACKER K997P PBT 투톤 RGB 완전방수 무접점 키보드</h5>
               <p class="card-text">
                 <span class="badge bg-dark">전자제품</span>
                 <span class="badge bg-dark">컴퓨터</span>
