--- a/html/product_create.html
+++ b/html/product_create.html
@@ -53,85 +53,125 @@
   </nav>
   <main class="mt-3">
     <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="http://earlyadopter.godohosting.com/goods_earlyadopter_godo_co_kr/320/1624843780807m3.jpg?cache_ver=2021033002" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="http://earlyadopter.godohosting.com/goods_earlyadopter_godo_co_kr/320/1624843780674m1.jpg?cache_ver=2021033002" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="http://earlyadopter.godohosting.com/goods_earlyadopter_godo_co_kr/320/1624843780553m2.jpg?cache_ver=2021033002" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <h2 class="text-center">제품 등록</h2>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">제품명</label>
+        <div class="col-md-9">
+          <input type="text" class="form-control">
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">가격</label>
+        <div class="col-md-9">
+          <div class="input-group mb-3">
+            <input type="number" class="form-control">
+            <span class="input-group-text" >원</span>
           </div>
         </div>
-        
-        <div class="col-md-7">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">ABKO HACKER K997P PBT 투톤 RGB 완전방수 무접점 키보드</h5>
-              <h5 class="card-title pt-3 pb-3 border-top">219,000원</h5>
-              <p class="card-text border-top pt-3 pb-3">
-                <span class="badge bg-dark">전자제품</span>
-                <span class="badge bg-dark">컴퓨터</span>
-                <span class="badge bg-dark">악세사리</span>
-              </p>
-              <p class="card-text pb-3">
-                배송비 2,500dnjs | 도서산간(제주도) 배송비 추가 5,000원 | 택배배송 | 5일 이내 출고 (주말, 공휴일 제외)
-              </p>
-              <p class="card-text border-top pb-3">
-                <div class="row">
-                  <div class="col-auto">
-                    <label class="col-form-label">구매수량</label>
-                  </div>
-                  <div class="col-auto">
-                    <div class="input-group">
-                      <span class="input-group-text">-</span>
-                      <input type="text" class="form-control" style="width:40px;" value="1">
-                      <span class="input-group-text">+</span>
-                    </div>
-                  </div>
-                </div>
-              </p>
-              <div class="row pt-3 pb-3 border-top">
-                <div class="col-6">
-                  <h3>총 상품 금액</h3>
-                </div>
-                <div class="col-6" style="text-align: right;">
-                  <h3>219,000원</h3>
-                </div>
-              </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="col-6 d-grid p-1">
-                  <button type="button" class="btn btn-lg btn-dark">장바구니 담기</button>
-                </div>
-                <div class="col-6 d-grid p-1">
-                  <button type="button" class="btn btn-lg btn-danger">주문하기</button>
-                </div>
-              </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">배송비</label>
+        <div class="col-md-9">
+          <div class="input-group mb-3">
+            <input type="number" class="form-control">
+            <span class="input-group-text" >원</span>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">추가배송비(도서산간)</label>
+        <div class="col-md-9">
+          <div class="input-group mb-3">
+            <input type="number" class="form-control">
+            <span class="input-group-text" >원</span>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">제품카테고리</label>
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-auto">
+              <select class="form-select">
+                <option>전자제품</option>
+              </select>
+            </div>
+            <div class="col-auto">
+              <select class="form-select">
+                <option>컴퓨터</option>
+              </select>
+            </div>
+            <div class="col-auto">
+              <select class="form-select">
+                <option>악세사리</option>
+              </select>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <img src="http://earlyadopter.godohosting.com/goods_earlyadopter_godo_co_kr/320/16ff480e4b20182a.jpg" class="img-fluid"/>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">태그</label>
+        <div class="col-md-9">
+          <input type="text" class="form-control">
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">출고일</label>
+        <div class="col-md-9">
+          <div class="input-group mb-3">
+            <input type="number" class="form-control">
+            <span class="input-group-text" >일 이내 출고</span>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">썸네일 이미지</label>
+        <div class="col-md-9">
+          <input  type="file" class="form-control" accept="image/png,image/jpeg">
+          <div class="alert alert-secondary" role="alert">
+            <ul>
+              <li>이미지 사이즈 : 700*700</li>
+              <li>파일 사이즈 : 1M 이하</li>
+              <li>파일 확장자 : png, jpg만 가능</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">제품 이미지</label>
+        <div class="col-md-9">
+          <input  type="file" class="form-control" accept="image/png,image/jpeg" multiple>
+          <div class="alert alert-secondary" role="alert">
+            <ul>
+              <li>최대 5개 가능</li>
+              <li>이미지 사이즈 : 700*700</li>
+              <li>파일 사이즈 : 1M 이하</li>
+              <li>파일 확장자 : png, jpg만 가능</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <label  class="col-md-3 col-form-label">제품 설명 이미지</label>
+        <div class="col-md-9">
+          <input  type="file" class="form-control" accept="image/png,image/jpeg">
+          <div class="alert alert-secondary" role="alert">
+            <ul>
+              <li>파일 사이즈 : 5M 이하</li>
+              <li>파일 확장자 : png, jpg만 가능</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <div class="col-6 d-grid p-1">
+          <button type="button" class="btn btn-lg btn-dark">취소하기</button>
+        </div>
+        <div class="col-6 d-grid p-1">
+          <button type="button" class="btn btn-lg btn-danger">저장하기</button>
         </div>
       </div>
     </div>
-    
   </main>
 
   <footer class="mt-5 py-5 bg-dark">
